--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <properties>
         <cdap.version>6.1.0-SNAPSHOT</cdap.version>
         <hadoop.version>2.3.0</hadoop.version>
+        <httpcomponents.version>4.5.9</httpcomponents.version>
         <hydrator.version>2.3.0-SNAPSHOT</hydrator.version>
         <spark2.version>2.1.3</spark2.version>
     </properties>
@@ -239,6 +240,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpcomponents.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
@@ -255,9 +261,21 @@
         </dependency>
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.29</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock-jre8-standalone</artifactId>
+            <version>2.25.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
