--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright © 2019 CDAP
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not
+  ~ use this file except in compliance with the License. You may obtain a copy of
+  ~ the License at
+  ~
+  ~ http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+  ~ WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+  ~ License for the specific language governing permissions and limitations under
+  ~ the License.
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.cdap</groupId>
+    <groupId>io.cdap.plugin</groupId>
     <artifactId>marketo-entity-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <repositories>
         <repository>
@@ -21,7 +36,7 @@
 
     <properties>
         <cdap.version>6.1.0-SNAPSHOT</cdap.version>
-        <hadoop.version>2.3.0</hadoop.version>
+        <hadoop.version>2.8.0</hadoop.version>
         <httpcomponents.version>4.5.9</httpcomponents.version>
         <hydrator.version>2.3.0-SNAPSHOT</hydrator.version>
         <spark2.version>2.1.3</spark2.version>
@@ -282,6 +297,61 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.rat</groupId>
+                <artifactId>apache-rat-plugin</artifactId>
+                <version>0.13</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.doxia</groupId>
+                        <artifactId>doxia-core</artifactId>
+                        <version>1.6</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>xerces</groupId>
+                                <artifactId>xercesImpl</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                </dependencies>
+                <executions>
+                    <execution>
+                        <id>rat-check</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <excludes>
+                                <exclude>LICENSE*.txt</exclude>
+                                <!-- This file should be not be there, but I am excluding it for now -->
+                                <exclude>*.rst</exclude>
+                                <exclude>*.md</exclude>
+                                <exclude>**/*.cdap</exclude>
+                                <exclude>**/*.yaml</exclude>
+                                <exclude>**/*.md</exclude>
+                                <exclude>logs/**</exclude>
+                                <exclude>.git/**</exclude>
+                                <exclude>.idea/**</exclude>
+                                <exclude>**/grok/patterns/**</exclude>
+                                <exclude>conf/**</exclude>
+                                <exclude>data/**</exclude>
+                                <exclude>plugins/**</exclude>
+                                <exlcude>**/*.patch</exlcude>
+                                <exclude>**/logrotate.d/**</exclude>
+                                <exclude>**/limits.d/**</exclude>
+                                <exclude>**/*.json</exclude>
+                                <exclude>**/*.json.template</exclude>
+                                <exclude>**/MANIFEST.MF</exclude>
+                                <!-- exclude any hack classes -->
+                                <exclude>**/org/apache/hadoop/**</exclude>
+                                <!-- exclude resource files-->
+                                <exclude>**/resources/**</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
@@ -307,7 +377,7 @@
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>6.19</version>
+                        <version>8.18</version>
                     </dependency>
                 </dependencies>
             </plugin>
