--- a/pom.xml
+++ b/pom.xml
@@ -279,11 +279,6 @@
             <artifactId>awaitility</artifactId>
             <version>4.0.1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.slf4j</groupId>-->
-<!--            <artifactId>slf4j-simple</artifactId>-->
-<!--            <version>1.7.29</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -294,6 +289,18 @@
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock-jre8-standalone</artifactId>
             <version>2.25.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cdap.cdap</groupId>
+            <artifactId>cdap-data-pipeline</artifactId>
+            <version>${cdap.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cdap.cdap</groupId>
+            <artifactId>hydrator-test</artifactId>
+            <version>${cdap.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
